--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "need_gold": 0,
   "min_count": 2,
   "max_count": 5,
-  "wait_time": 5,
+  "wait_time": 8,
   "zhuang_type": 4,
   "match_sort": [
     4,
@@ -24,9 +24,9 @@
   "zjh": {
     "out_look_count": 0,
     "fight_round": 1,
-    "top_count": 15,
+    "top_count": 15
   },
   "cx": {
-    "bet_max": 20
+    "bet_max": 50
   }
 }
